# Hawk.Sol

./: Anchor.toml  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
cli/src/branding/: banner.rs  mod.rs  palette.rs  tty.rs
cli/src/commands/: demo.rs  init.rs  mod.rs  resume.rs  status.rs  trip.rs  tx_output.rs
cli/src/commands/demo/: act_attack.rs  act_normal.rs  json.rs  keypairs.rs  mod.rs  preflight.rs  render.rs  setup.rs  summary.rs
cli/src/ix/: guarded_withdraw.rs  init.rs  mod.rs  resume.rs  trip.rs
cli/src/model/: mod.rs  status.rs
cli/src/render/: bar.rs  format.rs  json.rs  mod.rs  status.rs
cli/src/rpc/: authority.rs  config.rs  decode.rs  init_checks.rs  keypair.rs  mod.rs  pdas.rs  status.rs  tx.rs
cli/tests/: demo.rs  status_render.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: circuit_breaker.rs  phase2_governance.rs
programs/circuit_breaker/: Cargo.toml
programs/circuit_breaker/src/: error.rs  events.rs  lib.rs
programs/circuit_breaker/src/instructions/: cancel_config_change.rs  emergency_route_to_safe.rs  execute_config_change.rs  guarded_withdraw.rs  initialize.rs  mod.rs  propose_config_change.rs  resume_ix.rs  trip_ix.rs  validate.rs
programs/circuit_breaker/src/state/: config.rs  mod.rs  pending.rs  window.rs
programs/circuit_breaker/src/window/: accounting.rs  mod.rs
tests/: circuit_breaker.ts
