[package]
name = "circuit_breaker"
version = "0.1.0"
description = "Solana Circuit Breaker Protocol — custodial-authority outflow velocity cap"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "circuit_breaker"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

[dev-dependencies]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
